--- a/web/src/main/webapp/product.xhtml
+++ b/web/src/main/webapp/product.xhtml
@@ -107,7 +107,8 @@
                     <cc:if test="#{productJSF.productId != 0}">
                         <div class="card shadow">
                             <div class="card-body">
-                                <img class="card-img-top" src="image?id=#{productJSF.productId}" alt="#{productJSF.product}"/>
+                                <img class="card-img-top" src="image?id=#{productJSF.productId}"
+                                     alt="#{productJSF.product}"/>
                                 <div class="card-img-overlay"></div>
                             </div>
                         </div>
