--- a/web/src/main/webapp/cart.xhtml
+++ b/web/src/main/webapp/cart.xhtml
@@ -38,7 +38,8 @@
                                         <td class="align-middle text-center">
                                             <h:commandButton value="-" class="btn btn-primary"
                                                              actionListener="#{productPurchaseJSF.decrement(product.id)}"/>
-                                            <h:outputText id="unit_#{product.id.value}" value="#{product.unit}" class="px-3"/>
+                                            <h:outputText id="unit_#{product.id.value}" value="#{product.unit}"
+                                                          class="px-3"/>
                                             <h:commandButton value="+" class="btn btn-primary"
                                                              actionListener="#{productPurchaseJSF.increment(product.id)}"/>
                                         </td>
