--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -9,7 +9,7 @@
 
     <ui:define name="content">
         <br/>
-        <h1>Zotteltec - Onlineshop</h1>
+        <h1>CheorgesTec - Onlineshop</h1>
         <hr/>
         <div class="card-columns">
             <h:form>
